[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Drones Invaders"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -40.0
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "MENU_PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 88.0
margin_right = 150.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "MENU_QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -54.0
margin_right = 220.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 3 )
text = "MENU_SETTINGS"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -22.0
margin_right = 268.0
custom_fonts/font = SubResource( 3 )
text = "MENU_LEADERBOARD"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -223.0
margin_top = -40.0
margin_right = 162.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="HighScoreContainer"]
margin_top = 8.0
margin_right = 336.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "MENU_HIGHSCORE"

[node name="HighScoreValue" type="Label" parent="HighScoreContainer"]
margin_left = 361.0
margin_top = 8.0
margin_right = 385.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "0"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
